--- a/myps3.css
+++ b/myps3.css
@@ -1,5 +1,5 @@
 .controller.ps.white {
-    background-image: url(base.png);
+    background-image: url(https://github.com/ynws/gamepadviewerCSS/blob/master/base.png?raw=true);
 }
 
 .ps.white .trigger {
